WIP: before Expo SDK 53 upgrade

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-EXPO_PUBLIC_BACKEND_API_URL=https://your-production-backend.com
 EXPO_PUBLIC_BACKEND_API_URL=https://mbc-backend-quj9.onrender.com
+EXPO_PUBLIC_SENTRY_DSN=https://92af02fd7b281ff6a4fd22822f445bbf@o4509155859496960.ingest.us.sentry.io/4509155862183936
