--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "prebuild": "node scripts/setup-env.js",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -20,7 +21,6 @@
     "expo": "~52.0.46",
     "expo-app-loading": "~2.1.1",
     "expo-font": "~13.0.2",
-    "react-native-iap": "^12.16.2",
     "expo-linear-gradient": "~14.0.0",
     "expo-modules-core": "~2.2.3",
     "expo-secure-store": "~14.0.0",
@@ -31,13 +31,18 @@
     "googleapis": "^148.0.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-draggable-flatlist": "^4.0.2",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-iap": "^12.16.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-webview": "13.12.5",
-    "sentry-expo": "~7.0.0"
+    "sentry-expo": "~7.0.0",
+    "react-native-reanimated": "~3.16.1",
+    "@sentry/react-native": "~6.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
